<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GatePassActivity"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/gatePass"
                    android:textColor="#ffffff"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:id="@+id/name_text_field_box"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/text_background"
                    app:labelText="@string/name"
                    app:hasClearButton="true"
                    app:useDenseSpacing="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id="@+id/name_extended_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"/>

                </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

                <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:id="@+id/mobile_text_field_box"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/text_background"
                    app:labelText="@string/mobileNumber"
                    app:minCharacters="10"
                    app:maxCharacters="10"
                    app:hasClearButton="true"
                    app:useDenseSpacing="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/name_text_field_box">

                    <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id="@+id/mobile_extended_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>

                </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

                <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:id="@+id/email_text_field_box"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/text_background"
                    app:labelText="@string/email"
                    app:hasClearButton="true"
                    app:useDenseSpacing="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mobile_text_field_box">

                    <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id="@+id/email_extended_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"/>

                </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

                <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:id="@+id/visit_date_text_field_box"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/text_background"
                    app:hasClearButton="true"
                    app:labelText="@string/visitingDate"
                    app:layout_constraintStart_toStartOf="@+id/email_text_field_box"
                    app:layout_constraintTop_toBottomOf="@id/email_text_field_box"
                    app:useDenseSpacing="true">

                    <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id="@+id/visit_date_extended_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

                <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:id="@+id/visit_time_text_field_box"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/text_background"
                    app:hasClearButton="true"
                    app:labelText="@string/visitingTime"
                    app:layout_constraintBottom_toBottomOf="@+id/visit_date_text_field_box"
                    app:layout_constraintEnd_toEndOf="@+id/email_text_field_box"
                    app:layout_constraintTop_toBottomOf="@+id/email_text_field_box"
                    app:useDenseSpacing="true">

                    <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id="@+id/visit_time_extended_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

                <Button
                    android:id="@+id/btnGeneratePass"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/button_background"
                    android:text="@string/generatePass"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/visit_date_text_field_box" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/imgQrCode"
                    android:layout_width="175dp"
                    android:layout_height="175dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:srcCompat="@tools:sample/avatars" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/cancel"
                    android:background="@drawable/button_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imgQrCode"
                    app:layout_constraintTop_toBottomOf="@+id/btnShare" />

                <Button
                    android:id="@+id/btnShare"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="68dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/button_background"
                    android:text="Share"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imgQrCode"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>