<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OwnerLoginActivity"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/login"
                    android:textColor="#ffffff"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:id="@+id/mobile_text_field_box"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/text_background"
                    app:labelText="@string/mobileNumber"
                    app:useDenseSpacing="true"
                    app:hasClearButton="true"
                    app:maxCharacters="10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" >

                    <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id="@+id/mobile_extended_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

                <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:id="@+id/password_text_field_box"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/text_background"
                    app:labelText="@string/password"
                    app:hasClearButton="true"
                    app:useDenseSpacing="true"
                    app:minCharacters="8"
                    app:maxCharacters="15"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mobile_text_field_box" >

                    <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id="@+id/password_extended_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>


                <TextView
                    android:id="@+id/tvForgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/forgetPassword"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@+id/password_text_field_box"
                    app:layout_constraintTop_toBottomOf="@+id/password_text_field_box" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_background"
                    android:text="@string/login"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvForgetPassword" />

                <View
                    android:id="@+id/view"
                    android:layout_width="350dp"
                    android:layout_height="2dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="18dp"
                    android:background="#ffffff"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/button_background"
                    android:text="@string/register"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view" />

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>