<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetActivity"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/forgetPassword"
                    android:textColor="#ffffff"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:id="@+id/mobile_text_field_box"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/text_background"
                    app:labelText="@string/mobileNumber"
                    app:hasClearButton="true"
                    app:useDenseSpacing="true"
                    app:minCharacters="10"
                    app:maxCharacters="10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id="@+id/mobile_extended_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>

                </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

                <Button
                    android:id="@+id/btnGenerateOtp"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/button_background"
                    android:text="@string/forget"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mobile_text_field_box" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="350dp"
                    android:layout_height="2dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:background="#ffffff"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnGenerateOtp" />

                <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:id="@+id/otp_text_field"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/text_background"
                    app:labelText="@string/otp"
                    android:inputType="number"
                    app:minCharacters="4"
                    app:maxCharacters="4"
                    app:hasClearButton="true"
                    app:useDenseSpacing="true"
                    android:editable="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.494"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view2">

                    <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id="@+id/otp_extended_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>

                </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>


                <Button
                    android:id="@+id/btnVerify"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_background"
                    android:text="@string/verify"
                    android:clickable="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/otp_text_field" />

                <View
                    android:id="@+id/view"
                    android:layout_width="350dp"
                    android:layout_height="2dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="18dp"
                    android:background="#ffffff"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnVerify" />

            </android.support.constraint.ConstraintLayout>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>