<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ChangeEmailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/changeEmail"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:id="@+id/old_email_text_field_box"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/text_background"
                    app:labelText="@string/oldEmail"
                    app:hasClearButton="true"
                    app:useDenseSpacing="true"
                    app:minCharacters="10"
                    app:maxCharacters="10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id="@+id/old_email_extended_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"/>

                </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

                <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:id="@+id/new_email_text_field_box"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/text_background"
                    app:hasClearButton="true"
                    app:labelText="@string/newEmail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/old_email_text_field_box"
                    app:maxCharacters="10"
                    app:minCharacters="10"
                    app:useDenseSpacing="true">

                    <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id="@+id/new_email_extended_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />

                </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>


                <Button
                    android:id="@+id/btnChangeEmail"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/button_background"
                    android:text="@string/changeMobileNumber"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/new_email_text_field_box" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="350dp"
                    android:layout_height="2dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:background="#ffffff"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnChangeEmail" />

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>